# lightsd

./: CMakeLists.txt  COPYING  ChangeLog  README.md  brightness_ctrl.cpp  brightness_ctrl.hpp  lightsd.conf  lightsd.openrc  main.cpp  sensor_als.cpp  sensor_als.hpp  sensors.cpp  sensors.hpp  utils.cpp  utils.hpp
tools/: fakebl.c
