cmake_minimum_required(VERSION 2.6)
project(lightsd)
set(SOURCES brightness_ctrl.cpp sensor_als.cpp sensors.cpp utils.cpp main.cpp)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(Threads REQUIRED)
add_executable(${PROJECT_NAME} ${SOURCES}) 
add_executable(fakebl tools/fakebl.c)
target_link_libraries(${PROJECT_NAME} stdc++fs)
target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
find_package(PkgConfig)
pkg_check_modules(OPENRC "openrc")
install(FILES lightsd.conf DESTINATION /etc COMPONENT config)
if(OPENRC_FOUND)
	#configure_file(lightsd.openrc )
	install(PROGRAMS lightsd.openrc DESTINATION /etc/init.d RENAME lightsd
		COMPONENT config)
endif()
